Fix review findings